perl-HTML-Parser: Autospec creation for update from version 3.76 to version 3.77
3.77      2022-03-14
  * Update tests to remove HTML4 specific tags (GH#25) (Jess)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Change history for HTML-Parser
 
+3.77      2022-03-14
+  * Update tests to remove HTML4 specific tags (GH#25) (Jess)
+
 3.76      2021-03-04
   * Add a fix for a stack confusion error on `eof`. (GH#21) (Matthew Horsfall
     and Chase Whitener)
