--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Change history for HTML-Parser
 
+3.80      2022-11-01
+  * Fix compatibility with ancient perl by avoiding index in test (GH#33)
+    (Graham Knop)
+
 3.79      2022-10-12
   * Modernise XS (GH#32) (James Raspass)
   * Skip threads on older perl versions, as they often segfault (GH#31) (Graham
