--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Change history for HTML-Parser
 
+3.82      2024-03-13
+    - "img lowsrc" and "body background" are not in the HTMLv5 spec (GH#43)
+      (Jess)
+    - Replace "FileHandle" with "IO::File" (GH#42) (James Raspass)
+    - Fix some minor typos (GH#41) (Yoshikazu Sawa)
+
 3.81      2023-01-30
     - Stop depending on "Test" (GH#34) (James Raspass)
     - fix test scripts after conversion to Test::More (GH#35) (Graham Knop)
